--- a/Notebooks/NotebookTemplate.ipynb
+++ b/Notebooks/NotebookTemplate.ipynb
@@ -28,12 +28,7 @@
     "import nest_asyncio\n",
     "nest_asyncio.apply()\n",
     "\n",
-    "from Scripts.AnimateAgents import *\n",
-    "from Scripts.InanimateAgents import *\n",
-    "from Scripts.EvacuationModel import *\n",
-    "from Scripts.ToyModel import *\n",
-    "from Scripts.PathFinding import *\n",
-    "# %matplotlib inline"
+    "from Scripts.PathFinding import create_toy_space"
    ],
    "metadata": {
     "collapsed": false,
@@ -77,94 +72,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "outputs": [],
-   "source": [
-    "# toy_model = create_toy_space(visalize=True)\n"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "starting\n",
-      "Doing model step #0!\n",
-      "Doing model step #1!\n",
-      "Doing model step #2!\n",
-      "Doing model step #3!\n",
-      "Doing model step #4!\n",
-      "Doing model step #5!\n",
-      "Doing model step #6!\n",
-      "Doing model step #7!\n",
-      "Doing model step #8!\n",
-      "Doing model step #9!\n",
-      "Doing model step #10!\n",
-      "Doing model step #11!\n",
-      "Doing model step #12!\n",
-      "Doing model step #13!\n",
-      "Doing model step #14!\n",
-      "Doing model step #15!\n",
-      "Doing model step #16!\n",
-      "Doing model step #17!\n",
-      "Doing model step #18!\n",
-      "Doing model step #19!\n",
-      "Doing model step #20!\n",
-      "Doing model step #21!\n",
-      "Doing model step #22!\n",
-      "Doing model step #23!\n",
-      "Doing model step #24!\n",
-      "Doing model step #25!\n",
-      "Doing model step #26!\n",
-      "Doing model step #27!\n",
-      "Doing model step #28!\n",
-      "Doing model step #29!\n",
-      "Doing model step #30!\n",
-      "Doing model step #31!\n",
-      "Doing model step #32!\n",
-      "Doing model step #33!\n",
-      "Doing model step #34!\n",
-      "Doing model step #35!\n",
-      "Doing model step #36!\n",
-      "Doing model step #37!\n",
-      "Doing model step #38!\n",
-      "Doing model step #39!\n",
-      "done\n"
+      "Interface starting at http://127.0.0.1:8521\n",
+      "Socket opened!\n",
+      "{\"type\":\"reset\"}\n",
+      "{\"type\":\"get_step\",\"step\":1}\n",
+      "{\"type\":\"get_step\",\"step\":2}\n",
+      "{\"type\":\"get_step\",\"step\":3}\n",
+      "{\"type\":\"get_step\",\"step\":4}\n",
+      "{\"type\":\"get_step\",\"step\":5}\n",
+      "{\"type\":\"get_step\",\"step\":6}\n"
      ]
     }
    ],
    "source": [
-    "toy_model = create_toy_space(visalize=False)\n",
-    "print('starting')\n",
-    "for _ in range(40):\n",
-    "    toy_model.step()\n",
-    "print('done')"
+    "toy_model = create_toy_space(visualize=True)\n"
    ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
-     "name": "#%%\n"
+     "name": "#%%\n",
+     "is_executing": true
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "# toy_model = create_toy_space(visalize=False)\n",
+    "# print('starting')\n",
+    "# for _ in range(40):\n",
+    "#     toy_model.step()\n",
+    "# print('done')"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n",
+     "is_executing": true
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "outputs": [],
    "source": [],
    "metadata": {
     "collapsed": false,
     "pycharm": {
-     "name": "#%%\n"
+     "name": "#%%\n",
+     "is_executing": true
     }
    }
   }
