CompositeTask is implemented (currently only with STUDY, but it works!)

--- a/Notebooks/Testing.ipynb
+++ b/Notebooks/Testing.ipynb
@@ -2,78 +2,26 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 33,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "lst = list(range(10))\n",
-    "\n",
-    "lst\n",
-    "lst.append('black sheep')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 5,
    "outputs": [
     {
-     "data": {
-      "text/plain": "False"
-     },
-     "execution_count": 34,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "and done\n"
+     ]
     }
    ],
    "source": [
-    "final = all(map(lambda v: isinstance(v, int), lst))\n",
-    "final"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 37,
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "True"
-     },
-     "execution_count": 37,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
+    "a = [1]\n",
+    "try:\n",
+    "    print(a[0])\n",
+    "except:\n",
+    "    pass\n",
     "\n",
-    "# new attempt\n",
-    "\n",
-    "n = 'lion'\n",
-    "type_list = [int, tuple, float]\n",
-    "\n",
-    "# if n is not of type in some list\n",
-    "boo = not any(map(lambda t: isinstance(n, t), type_list))\n",
-    "boo"
+    "print('and done')"
    ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 35,
-   "outputs": [],
-   "source": [],
    "metadata": {
     "collapsed": false,
     "pycharm": {
