modularized subtask generation

--- a/Notebooks/Testing.ipynb
+++ b/Notebooks/Testing.ipynb
@@ -2,26 +2,39 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1\n",
-      "and done\n"
+      "<__main__.A object at 0x7f982bc0cf10>\n",
+      "A\n"
      ]
     }
    ],
    "source": [
-    "a = [1]\n",
-    "try:\n",
-    "    print(a[0])\n",
-    "except:\n",
-    "    pass\n",
+    "class A:\n",
     "\n",
-    "print('and done')"
+    "    def __init__(self):\n",
+    "        pass\n",
+    "\n",
+    "a = A()\n",
+    "print(a)\n",
+    "print(a.__class__.__name__)"
    ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "outputs": [],
+   "source": [],
    "metadata": {
     "collapsed": false,
     "pycharm": {
