rudimentary staff tasks: done

--- a/Notebooks/Main.ipynb
+++ b/Notebooks/Main.ipynb
@@ -27,8 +27,6 @@
     "# This avoids runtime errors in the animation\n",
     "import nest_asyncio\n",
     "nest_asyncio.apply()\n",
-    "\n",
-    "from Scripts.ToyModel import *\n",
     "from Scripts.Visualization import *"
    ],
    "metadata": {
@@ -55,6 +53,7 @@
    "execution_count": 2,
    "outputs": [],
    "source": [
+    "# from Scripts.ToyModel import *\n",
     "# model = ToyModel()\n",
     "#\n",
     "# for i in range(1000):\n",
@@ -137,7 +136,25 @@
       "{\"type\":\"get_step\",\"step\":56}\n",
       "{\"type\":\"get_step\",\"step\":57}\n",
       "{\"type\":\"get_step\",\"step\":58}\n",
-      "{\"type\":\"get_step\",\"step\":59}\n"
+      "{\"type\":\"get_step\",\"step\":59}\n",
+      "{\"type\":\"get_step\",\"step\":60}\n",
+      "{\"type\":\"get_step\",\"step\":61}\n",
+      "{\"type\":\"get_step\",\"step\":62}\n",
+      "{\"type\":\"get_step\",\"step\":63}\n",
+      "{\"type\":\"get_step\",\"step\":64}\n",
+      "{\"type\":\"get_step\",\"step\":65}\n",
+      "{\"type\":\"get_step\",\"step\":66}\n",
+      "{\"type\":\"get_step\",\"step\":67}\n",
+      "{\"type\":\"get_step\",\"step\":68}\n",
+      "{\"type\":\"get_step\",\"step\":69}\n",
+      "{\"type\":\"get_step\",\"step\":70}\n",
+      "{\"type\":\"get_step\",\"step\":71}\n",
+      "{\"type\":\"get_step\",\"step\":72}\n",
+      "{\"type\":\"get_step\",\"step\":73}\n",
+      "{\"type\":\"get_step\",\"step\":74}\n",
+      "{\"type\":\"get_step\",\"step\":75}\n",
+      "{\"type\":\"get_step\",\"step\":76}\n",
+      "{\"type\":\"get_step\",\"step\":77}\n"
      ]
     },
     {
