walking speed adjusted (dependent on nr of people around agent)

--- a/Notebooks/Main.ipynb
+++ b/Notebooks/Main.ipynb
@@ -104,7 +104,9 @@
       "{\"type\":\"get_step\",\"step\":55}\n",
       "{\"type\":\"get_step\",\"step\":56}\n",
       "{\"type\":\"get_step\",\"step\":57}\n",
-      "{\"type\":\"get_step\",\"step\":58}\n"
+      "{\"type\":\"get_step\",\"step\":58}\n",
+      "{\"type\":\"get_step\",\"step\":59}\n",
+      "{\"type\":\"get_step\",\"step\":60}\n"
      ]
     },
     {
