all behaviors are implemented

--- a/Notebooks/Testing.ipynb
+++ b/Notebooks/Testing.ipynb
@@ -2,26 +2,60 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<__main__.A object at 0x7f982bc0cf10>\n",
-      "A\n"
-     ]
-    }
-   ],
+   "execution_count": 1,
+   "outputs": [],
    "source": [
-    "class A:\n",
+    "from mesa import Model, Agent\n",
+    "from mesa.time import RandomActivation\n",
+    "from mesa.space import MultiGrid\n",
     "\n",
-    "    def __init__(self):\n",
-    "        pass\n",
     "\n",
-    "a = A()\n",
-    "print(a)\n",
-    "print(a.__class__.__name__)"
+    "class MoneyAgent(Agent):\n",
+    "    \"\"\" An agent with fixed initial wealth.\"\"\"\n",
+    "    def __init__(self, unique_id, model):\n",
+    "        super().__init__(unique_id, model)\n",
+    "        self.wealth = 1\n",
+    "\n",
+    "    def move(self):\n",
+    "        possible_steps = self.model.grid.get_neighborhood(\n",
+    "            self.pos,\n",
+    "            moore=True,\n",
+    "            include_center=False)\n",
+    "        new_position = self.random.choice(possible_steps)\n",
+    "        self.model.grid.move_agent(self, new_position)\n",
+    "\n",
+    "    def give_money(self):\n",
+    "        cellmates = self.model.grid.get_cell_list_contents([self.pos])\n",
+    "        if len(cellmates) > 1:\n",
+    "            other_agent = self.random.choice(cellmates)\n",
+    "            other_agent.wealth += 1\n",
+    "            self.wealth -= 1\n",
+    "\n",
+    "    def step(self):\n",
+    "        self.move()\n",
+    "        if self.wealth > 0:\n",
+    "            self.give_money()\n",
+    "\n",
+    "\n",
+    "class MoneyModel(Model):\n",
+    "    \"\"\"A model with some number of agents.\"\"\"\n",
+    "    def __init__(self, N, width, height):\n",
+    "        self.num_agents = N\n",
+    "        self.grid = MultiGrid(width, height, True)\n",
+    "        self.schedule = RandomActivation(self)\n",
+    "        self.agent = 0\n",
+    "        # Create agents\n",
+    "        for i in range(self.num_agents):\n",
+    "            a = MoneyAgent(i, self)\n",
+    "            self.agent = a\n",
+    "            self.schedule.add(a)\n",
+    "            # Add the agent to a random grid cell\n",
+    "            x = self.random.randrange(self.grid.width)\n",
+    "            y = self.random.randrange(self.grid.height)\n",
+    "            self.grid.place_agent(a, (x, y))\n",
+    "\n",
+    "    def step(self):\n",
+    "        self.schedule.step()\n"
    ],
    "metadata": {
     "collapsed": false,
@@ -32,9 +66,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "outputs": [],
-   "source": [],
+   "execution_count": 2,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "surrounding visitors: [<__main__.MoneyAgent object at 0x7f98b98ce190>]\n",
+      "surrounding visitors: []\n",
+      "done\n"
+     ]
+    }
+   ],
+   "source": [
+    "model = MoneyModel(1, 10, 10)\n",
+    "\n",
+    "for i in range(100):\n",
+    "    model.step()\n",
+    "\n",
+    "lst = model.grid.get_neighbors((0, 0), moore=True, radius=20)\n",
+    "print(f'surrounding visitors: {lst}')\n",
+    "\n",
+    "agent = model.agent\n",
+    "model.grid.remove_agent(agent)\n",
+    "lst = model.grid.get_neighbors((0,0), moore=True, radius=20)\n",
+    "print(f'surrounding visitors: {lst}')\n",
+    "\n",
+    "print('done')"
+   ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
