Omnibus build for Integration; not complete yet, has the following issues: * very long run time (suspecting visitor run check) * index mismatch (suspecting int to int64 mismatch)

--- a/Notebooks/MapModel_sanity2.ipynb
+++ b/Notebooks/MapModel_sanity2.ipynb
@@ -1,63 +1,28 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
-   "metadata": {
-    "collapsed": true,
-    "pycharm": {
-     "name": "#%% md\n"
-    }
-   },
-   "source": [
-    "# Main Notebook\n",
-    "\n",
-    "The purpose of this notebook consists in running experiments."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "source": [
-    "# Imports"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
    "cell_type": "code",
    "execution_count": 1,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import os\n",
+    "\n",
     "os.chdir('..')\n",
     "import sys\n",
-    "sys.path.insert(0, './Scripts')\n",
-    "\n",
-    "# This avoids runtime errors in the animation\n",
+    "sys.path.append('./Scripts')\n",
     "import nest_asyncio\n",
     "nest_asyncio.apply()\n",
     "\n",
+    "from Scripts import MappingModel as MM\n",
     "from Scripts.Experiment import *"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "markdown",
-   "source": [
-    "# Running the Model without an animation as an experiment"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "outputs": [
     {
      "name": "stdout",
@@ -75,16 +40,16 @@
       "\n",
       "Running replications for exit type: ExitType.A\n",
       "\tRunning 1 replications:\n",
-      "\tMappingModel.py: all grid objects transferred to MESA grid entities.\n",
-      "\t>Pre-calculating exit paths for staff, total count: 6.\n",
-      "\t>Estimated time per staff: ~1min. Make yourself comfortable\n",
-      "\t\t>>progress: 1/6\n",
-      "\t\t>>progress: 2/6\n",
-      "\t\t>>progress: 3/6\n",
-      "\t\t>>progress: 4/6\n",
-      "\t\t>>progress: 5/6\n",
-      "\t\t>>progress: 6/6\n",
-      "\t\t>>All staff agents' exit paths pre-calculated.\n"
+      "MappingModel.py: all grid objects transferred to MESA grid entities.\n",
+      "Pre-calculating exit paths for staff, total count: 6\n",
+      ".Estimated time per staff: ~1min. Make yourself comfortable\n",
+      "\t progress: 1/6\n",
+      "\t progress: 2/6\n",
+      "\t progress: 3/6\n",
+      "\t progress: 4/6\n",
+      "\t progress: 5/6\n",
+      "\t progress: 6/6\n",
+      "All staff agents' exit paths pre-calculated.\n"
      ]
     },
     {
@@ -94,7 +59,7 @@
      "traceback": [
       "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
       "\u001B[1;31mIndexError\u001B[0m                                Traceback (most recent call last)",
-      "\u001B[1;32m<ipython-input-3-8e8e5e30c187>\u001B[0m in \u001B[0;36m<module>\u001B[1;34m\u001B[0m\n\u001B[0;32m      1\u001B[0m \u001B[0mexperiment\u001B[0m \u001B[1;33m=\u001B[0m \u001B[0mExperiment\u001B[0m\u001B[1;33m(\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[1;32m----> 2\u001B[1;33m experiment.run(n_replications=1, visualize=False, max_run_length=1000, n_visitors=10, female_ratio=0.5, adult_ratio=0.5,\n\u001B[0m\u001B[0;32m      3\u001B[0m                familiarity=0.1, model=MapModel)\n\u001B[0;32m      4\u001B[0m \u001B[1;33m\u001B[0m\u001B[0m\n",
+      "\u001B[1;32m<ipython-input-2-f6455f84eb59>\u001B[0m in \u001B[0;36m<module>\u001B[1;34m\u001B[0m\n\u001B[0;32m      1\u001B[0m \u001B[0mexp\u001B[0m \u001B[1;33m=\u001B[0m \u001B[0mExperiment\u001B[0m\u001B[1;33m(\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0;32m      2\u001B[0m \u001B[1;33m\u001B[0m\u001B[0m\n\u001B[1;32m----> 3\u001B[1;33m \u001B[0mexp\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0mrun\u001B[0m\u001B[1;33m(\u001B[0m\u001B[0mn_replications\u001B[0m\u001B[1;33m=\u001B[0m\u001B[1;36m1\u001B[0m\u001B[1;33m,\u001B[0m \u001B[0mmodel\u001B[0m\u001B[1;33m=\u001B[0m\u001B[0mMapModel\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0m\u001B[0;32m      4\u001B[0m \u001B[1;33m\u001B[0m\u001B[0m\n",
       "\u001B[1;32mD:\\Downloads\\@Books\\@TPM\\@ABM\\ABM_2021_Q1\\Scripts\\Experiment.py\u001B[0m in \u001B[0;36mrun\u001B[1;34m(self, n_replications, visualize, max_run_length, n_visitors, female_ratio, adult_ratio, familiarity, model)\u001B[0m\n\u001B[0;32m     31\u001B[0m         \u001B[1;32mfor\u001B[0m \u001B[0mex\u001B[0m \u001B[1;32min\u001B[0m \u001B[0mExitType\u001B[0m\u001B[1;33m:\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0;32m     32\u001B[0m             \u001B[0mprint\u001B[0m\u001B[1;33m(\u001B[0m\u001B[1;34mf\"\\nRunning replications for exit type: {ex}\"\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[1;32m---> 33\u001B[1;33m             self.evacuation_times[ex] = self.run_n_replications(n_replications=n_replications, visualize=visualize,\n\u001B[0m\u001B[0;32m     34\u001B[0m                                                                 \u001B[0mmax_run_length\u001B[0m\u001B[1;33m=\u001B[0m\u001B[0mmax_run_length\u001B[0m\u001B[1;33m,\u001B[0m \u001B[0mn_visitors\u001B[0m\u001B[1;33m=\u001B[0m\u001B[0mn_visitors\u001B[0m\u001B[1;33m,\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0;32m     35\u001B[0m                                                                 \u001B[0mfemale_ratio\u001B[0m\u001B[1;33m=\u001B[0m\u001B[0mfemale_ratio\u001B[0m\u001B[1;33m,\u001B[0m \u001B[0madult_ratio\u001B[0m\u001B[1;33m=\u001B[0m\u001B[0madult_ratio\u001B[0m\u001B[1;33m,\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n",
       "\u001B[1;32mD:\\Downloads\\@Books\\@TPM\\@ABM\\ABM_2021_Q1\\Scripts\\Experiment.py\u001B[0m in \u001B[0;36mrun_n_replications\u001B[1;34m(self, n_replications, visualize, max_run_length, n_visitors, female_ratio, adult_ratio, familiarity, valid_exits)\u001B[0m\n\u001B[0;32m     57\u001B[0m         \u001B[1;32mfor\u001B[0m \u001B[0mi\u001B[0m \u001B[1;32min\u001B[0m \u001B[0mrange\u001B[0m\u001B[1;33m(\u001B[0m\u001B[0mn_replications\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m:\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0;32m     58\u001B[0m \u001B[1;33m\u001B[0m\u001B[0m\n\u001B[1;32m---> 59\u001B[1;33m             evac_time = self.run_one_replication(visualize=visualize, max_run_length=max_run_length, n_visitors=n_visitors,\n\u001B[0m\u001B[0;32m     60\u001B[0m                                                  \u001B[0mfemale_ratio\u001B[0m\u001B[1;33m=\u001B[0m\u001B[0mfemale_ratio\u001B[0m\u001B[1;33m,\u001B[0m \u001B[0madult_ratio\u001B[0m\u001B[1;33m=\u001B[0m\u001B[0madult_ratio\u001B[0m\u001B[1;33m,\u001B[0m \u001B[0mfamiliarity\u001B[0m\u001B[1;33m=\u001B[0m\u001B[0mfamiliarity\u001B[0m\u001B[1;33m,\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0;32m     61\u001B[0m                                                  valid_exits=valid_exits, model=self.model)\n",
       "\u001B[1;32mD:\\Downloads\\@Books\\@TPM\\@ABM\\ABM_2021_Q1\\Scripts\\Experiment.py\u001B[0m in \u001B[0;36mrun_one_replication\u001B[1;34m(visualize, max_run_length, n_visitors, female_ratio, adult_ratio, familiarity, valid_exits, model)\u001B[0m\n\u001B[0;32m     96\u001B[0m             \u001B[1;31m# Run model\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0;32m     97\u001B[0m             \u001B[1;32mfor\u001B[0m \u001B[0mi\u001B[0m \u001B[1;32min\u001B[0m \u001B[0mrange\u001B[0m\u001B[1;33m(\u001B[0m\u001B[0mmax_run_length\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m:\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[1;32m---> 98\u001B[1;33m                 \u001B[0mmodel\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0mstep\u001B[0m\u001B[1;33m(\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0m\u001B[0;32m     99\u001B[0m \u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0;32m    100\u001B[0m                 \u001B[1;32mif\u001B[0m \u001B[0mmodel\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0mis_done\u001B[0m\u001B[1;33m(\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m:\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n",
@@ -111,32 +76,9 @@
     }
    ],
    "source": [
-    "experiment = Experiment()\n",
-    "experiment.run(n_replications=1, visualize=False, max_run_length=100, n_visitors=10, female_ratio=0.5, adult_ratio=0.5,\n",
-    "               familiarity=0.1, model=MapModel)"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "markdown",
-   "source": [
-    "# Experimental results"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [
-    "experiment.show_evacuation_time_averages()"
+    "exp = Experiment()\n",
+    "\n",
+    "exp.run(n_replications=1, model=MapModel)"
    ],
    "metadata": {
     "collapsed": false,
@@ -150,62 +92,8 @@
    "execution_count": null,
    "outputs": [],
    "source": [
-    "experiment.show_all_times()"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [
-    "experiment.show_boxplot_evacuation_times(outliers=False)"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [
-    "experiment.show_boxplot_evacuation_times(outliers=True)\n"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "markdown",
-   "source": [
-    "# Running the Model with an animation\n"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%% md\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [
-    "experiment = Experiment()\n",
-    "experiment.run(visualize=True, n_visitors=10, female_ratio=0.5, adult_ratio=0.5, familiarity=0.1)\n"
+    "#spwn = pd.DataFrame(test.spawnable_positions)\n",
+    "#sns.scatterplot(x=spwn[0], y=spwn[1])"
    ],
    "metadata": {
     "collapsed": false,
