Updated pixel conversion code for reliability and route retrieval. Cleared off some terrible pixels in map as well.

--- a/Notebooks/MapModel_sanity.ipynb
+++ b/Notebooks/MapModel_sanity.ipynb
@@ -49,7 +49,7 @@
    "source": [
     "exp = Experiment()\n",
     "\n",
-    "exp.run(n_replications=1, model=MapModel)"
+    "exp.run(n_replications=1, model=EvacuationModel)"
    ],
    "metadata": {
     "collapsed": false,
