--- a/Notebooks/MapModel_sanity2.ipynb
+++ b/Notebooks/MapModel_sanity2.ipynb
@@ -77,7 +77,7 @@
    "source": [
     "exp = Experiment()\n",
     "\n",
-    "exp.run(n_replications=1, model=MapModel)"
+    "exp.run(n_replications=1, model=EvacuationModel)"
    ],
    "metadata": {
     "collapsed": false,
