Separated animation section to Main_animation.ipynb. Some minor additions to Visualization.py, and changes in documentation to the notebook and README

--- a/Notebooks/Main.ipynb
+++ b/Notebooks/Main.ipynb
@@ -65,78 +65,9 @@
     "#               (modifier=0 is just for testing purposes)\n",
     "exp.save_data_to_pickle(modifier='1_B')\n",
     "\n",
-    "exp.show_execution_times()"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "markdown",
-   "source": [
-    "# Run an animation\n",
-    "_(take note an animation run is very slow!)_\n",
-    "\n",
-    "This section has the same code structure as the previous, but this time with `visualize=True`"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%% md\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Setting up the experiment ...\n",
-      "\n",
-      "Running the experiment with inputs:\n",
-      "\t- n_replications: \t1\n",
-      "\t- max_run_length: \t1000\n",
-      "\t- n_visitors: \t\t50\n",
-      "\t- female_ratio: \t0.5\n",
-      "\t- adult_ratio: \t\t0.5\n",
-      "\t- familiarity: \t\t0.1\n",
-      "\n",
-      "Set Map object currently Images/Library_NewPlan2_map.png.\n",
-      "\n",
-      "Running visualization.\n",
-      "\n",
-      "Interface starting at http://127.0.0.1:8521\n",
-      "Socket opened!\n",
-      "{\"type\":\"reset\"}\n"
-     ]
-    }
-   ],
-   "source": [
-    "exp = Experiment()\n",
-    "\n",
-    "exp.run(model=EvacuationModel, map_img_path='Images/Library_NewPlan2_map.png',\n",
-    "        n_visitors=50, n_officestaff=10, visualize=True, n_replications=1, valid_exits=[ExitType.ABC])\n",
+    "exp.show_execution_times()\n",
     "\n"
    ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n",
-     "is_executing": true
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [],
    "metadata": {
     "collapsed": false,
     "pycharm": {
